--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,6 @@
 #webdriver.driver=edge
 webdriver.driver=chrome
 serenity.take.screenshots=AFTER_EACH_STEP
-serenity.project.name = Reto Automatición Web SQA
+serenity.project.name = Reto Automatizacion Web Orange De Gestión De Empleados 
 serenity.browser.width = 1440
 serenity.browser.height= 900
