Se crea las acciones para acceder al login

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,6 @@
 #webdriver.driver=edge
-webdriver.driver=chrome
+#webdriver.driver=chrome
+webdriver.driver=firefox
 serenity.take.screenshots=AFTER_EACH_STEP
 serenity.project.name = Reto Automatizacion Web Orange De Gestión De Empleados 
 serenity.browser.width = 1440
