Feature: Se crea nuevo caso @DeleteUploadFile FIX:se actualizan mapeos

--- a/serenity.properties
+++ b/serenity.properties
@@ -5,3 +5,4 @@ serenity.take.screenshots=AFTER_EACH_STEP
 serenity.project.name = Reto Automatizacion Web Orange De Gestión De Empleados 
 serenity.browser.width = 1440
 serenity.browser.height= 900
+#serenity.browser.fullscreen=true
