--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,8 +1,38 @@
 environments{
-    stg {
-        webdriver.base.url="https://opensource-demo.orangehrmlive.com/"
-    }
-    default {
-     webdriver.base.url="https://opensource-demo.orangehrmlive.com/"
-    }
+        stg {
+            webdriver.base.url="https://opensource-demo.orangehrmlive.com/"
+        }
+        default {
+         webdriver.base.url="https://opensource-demo.orangehrmlive.com/"
+        }
+
+        chrome{
+            webdriver {
+                  driver = chrome
+                  autodownload = true
+                  capabilities {
+                    browserName = "chrome"
+                    "goog:chromeOptions" {
+                      args = ["--incognito"]
+                    }
+                  }
+            }
+        }
+
+        firefox{
+            webdriver {
+              driver = firefox
+              capabilities {
+                browserName = "firefox"
+                "moz:firefoxOptions" {
+                  args = ["--private"]
+                }
+              }
+            }
+        }
+
 }
+
+
+
+
